@@ -1,6 +1,5 @@
 - Allow iptc to operate on multiple files at once.
 - --modify option should add tag if not already present.
 - Add --append option to append text to existing tag
-- iptc should preserve file permissions
 
 - Additional file formats
